# CLEMMY3

./: .gitignore  CMakeLists.txt  DEVELOPMENT_PLAN.md  README.md  VST_PORT_PLAN.md
Docs/: ARCHITECTURE.md  BUILD_GUIDE.md  GUI_ASSET_SPECIFICATIONS.html  GUI_ASSET_SPECIFICATIONS.md  PHASE0_VALIDATION.md  PHASE1_VALIDATION.md  PYTHON_REFERENCE.md  UI_CUSTOMIZATION_GUIDE.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h
Source/DSP/: AudioUtils.h  Envelope.cpp  Envelope.h  LFO.cpp  LFO.h  MoogFilter.cpp  MoogFilter.h  NoiseGenerator.cpp  NoiseGenerator.h  Oscillator.cpp  Oscillator.h  Voice.cpp  Voice.h  VoiceManager.cpp  VoiceManager.h
